# PolyMarket_Mimic_Trader

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.MD  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_V2.md  INVARIANTS.md  PROFITABILITY_ANALYSIS_JUNE_2026.md  README.md  SECURITY.md  agents.md  config.yaml  next_steps.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/commands/: deploy-check.md  next-chunk.md  optimizer.md  pr-sweep.md
.claude/skills/api-drift-audit/: SKILL.md  probe.sh
.claude/skills/fact-check/: SKILL.md
.claude/skills/next-chunk/: SKILL.md
.claude/skills/preflight/: SKILL.md  preflight.sh
.codex/: README.md
.codex/commands/: README.md  add-enhance-tests.md  optimize-money-mode.md  optimizer.md  research-polymarket-api.md
.codex/skills/add-enhance-tests/: SKILL.md
.codex/skills/fable-protocol/: SKILL.md
.codex/skills/optimize-money-mode/: SKILL.md
.codex/skills/optimizer/: SKILL.md  bootstrap.sh  verify.sh
.codex/skills/refactor/: SKILL.md
.github/workflows/: ci.yml  codeql.yml
docs/: DUE_DILIGENCE_AUDIT_2026-07-08.md  POLYMARKET_API_AND_LEGAL_RECHECK_2026-07-09.md  POLYMARKET_BOT_STRATEGY_RESEARCH_2026-06-30.md  POLYMARKET_REAL_MONEY_READINESS_PR_PLAN_2026-07-03.md  PROFITABILITY_FACTCHECK_REPORT_JULY_2026.md  PR_75_76_77_CLAIMS_NOTEPAD.md  REAL_MONEY_WAVE1_2026-07-09.md
polymarket_copier/: __init__.py  config.py  main.py
polymarket_copier/api/: clob_client.py  data_client.py  gamma_client.py
polymarket_copier/core/: copier.py  metrics.py  monitor.py  portfolio.py  risk_manager.py  sizing.py  tracker.py
polymarket_copier/models/: types.py
polymarket_copier/utils/: activity.py  addresses.py  logger.py
scripts/: check-lint.ps1
tests/: conftest.py  test_activity.py  test_addresses.py  test_api_session.py  test_chaos.py  test_clob_client.py  test_config.py  test_copier.py  test_data_client.py  test_gamma_client.py  test_integration.py  test_invariants.py  test_logger.py  test_main.py  test_metrics.py  test_monitor.py  test_monitor_wallets.py  test_portfolio.py  test_readme_docs.py  test_risk_manager.py  test_sizing.py  test_timestamps.py  test_tracker.py  test_types.py
(+2 files in other folders)
